# brick

./: .hgignore  Makefile.am  autogen.sh  configure.ac
data/: schema_sqlite3.sql
po/: LINGUAS  en_GB.po
src/: Makefile.am  brick.h  control.c  control.h  main.c  model.c  model.h  ui.c  ui.h  ui_gtk.c  ui_gtk.h
